reduce leaderboard font on mobile, fixes #230

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -251,9 +251,9 @@ button {
             margin    : 3px;
             font-size : @font-size-base * 0.6;
         }
-        &.mobile {
+        &.mobile div {
             margin-bottom : 2px;
-            font-size     : @font-size-base * 0.4;
+            font-size : @font-size-base * 0.35;
         }
     }
 }
